// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CircleLoader2 Loader should render image avatar properly 1`] = `
<div>
  <div
    class="sc-gsTCUz gvGlZC"
  >
    <div
      class="sc-bdfBwQ hefCnw"
    />
  </div>
</div>
`;

exports[`CircleLoader2 Loader should render with all the props given 1`] = `
<div>
  <div
    class="sc-gsTCUz eYYxuo"
  >
    <div
      class="sc-bdfBwQ kCXDKV"
    />
  </div>
</div>
`;

exports[`CircleLoader2 Loader should render with default theme 1`] = `
<div>
  <div
    class="sc-gsTCUz htzeJZ"
  >
    <div
      class="sc-bdfBwQ hefCnw"
    />
  </div>
</div>
`;
